mobile alignment bug fix

--- a/datawrapper_version/index.css
+++ b/datawrapper_version/index.css
@@ -277,6 +277,8 @@ nav li:hover {
     }
 
     .state-container {
+        align-self: center;
+        width: 90%;
     }
 
 
